feat(reminders): add dose schedules with web push notifications

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,8 @@ DB_USER=my_user
 DB_PASS=your_password
 DB_CHARSET=utf8mb4
 AUTH_SESSION_NAME=medicine_log_session
+PUSH_VAPID_PUBLIC_KEY=
+PUSH_VAPID_PRIVATE_KEY=
+PUSH_VAPID_SUBJECT=mailto:you@example.com
+REMINDER_WINDOW_MINUTES=5
+REMINDER_CRON_TOKEN=replace_with_random_token
