fix(reminders): add server logging and harden scheduled push dispatch

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
 APP_ENV=local
 APP_TIMEZONE=America/New_York
+APP_LOG_ENABLED=1
+APP_LOG_FILE=logs/medicine.log
 
 DB_DRIVER=mysql
 DB_HOST=127.0.0.1
@@ -13,4 +15,5 @@ PUSH_VAPID_PUBLIC_KEY=
 PUSH_VAPID_PRIVATE_KEY=
 PUSH_VAPID_SUBJECT=mailto:you@example.com
 REMINDER_WINDOW_MINUTES=5
+REMINDER_GRACE_SECONDS=90
 REMINDER_CRON_TOKEN=replace_with_random_token
