--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,9 @@ APP_ENV=local
 APP_TIMEZONE=America/New_York
 APP_LOG_ENABLED=1
 APP_LOG_FILE=logs/medicine.log
+APP_LOG_JSON_FILE=logs/medicine.json
+REMINDER_REQUEST_INFO_ENABLED=1
+REMINDER_REQUEST_INFO_FILE=logs/process_reminders.info
 
 DB_DRIVER=mysql
 DB_HOST=127.0.0.1
@@ -14,6 +17,4 @@ AUTH_SESSION_NAME=medicine_log_session
 PUSH_VAPID_PUBLIC_KEY=
 PUSH_VAPID_PRIVATE_KEY=
 PUSH_VAPID_SUBJECT=mailto:you@example.com
-REMINDER_WINDOW_MINUTES=5
-REMINDER_GRACE_SECONDS=90
 REMINDER_CRON_TOKEN=replace_with_random_token
